# rust-engine

./: .gitignore  Cargo.toml  README.md  build.rs  cargo.toml  config.toml  rustfmt.toml
engine/: main.rs  movepick.rs  net.rs  nn.rs  psqt.rs  search.rs  search_consts.rs  uci.rs
neural/: cargo.toml  plain.npy  write.py
neural/src/: load.rs  main.rs  net.npy  simd.rs
rust-trainer/: Cargo.toml  config.toml  main.rs
rust-trainer/src/: main.rs
src/: main.rs  movepick.rs  net.rs  nn.rs  position.rs  psqt.rs  search.rs  search_consts.rs  sthread.rs  transpositions.rs  uci.rs
src/uci/: search.rs
trainer/: config.toml  main.py  requirements.txt
