[package]
authors = ["OfekShochat o@shoch.at"]
name = "chessengine"
version = "0.0.1"

[dependencies]
chess = { version = "3.2.0", optional = true }
packed_simd = { version = "0.3.4", package = "packed_simd_2", optional = true }
tch = {version = "*", optional = true }
easy_reader = { version = "*", optional = true }
fastapprox = { version = "*", optional = true }
toml = { version = "*", optional = true }
serde_derive = { version = "*", optional = true }
serde = { version = "*", optional = true }
ctrlc = { version = "*", optional = true }

[features]
engine = ["chess", "packed_simd"]
trainer = ["chess", "tch", "easy_reader", "fastapprox", "toml", "serde_derive", "serde", "ctrlc"]

[[bin]]
name = "engine"
path = "engine/main.rs"
required-features = ["engine"]

[[bin]]
name = "trainer"
path = "rust-trainer/main.rs"
required-features = ["trainer"]

[profile.release.build-override]
opt-level = 3
